@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-01-12T01:16:08Z",
-  "count_outdated" : 246,
-  "uniques_outdated" : 180,
+  "timestamp" : "2025-01-25T00:38:20Z",
+  "count_outdated" : 247,
+  "uniques_outdated" : 181,
   "count" : 248,
   "uniques" : 182,
   "clones" : [
-    {
-      "timestamp": "2025-01-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-01-11T00:00:00Z",
       "count": 1,
