@@ -1,3 +1,12 @@
+2025-01-25T00:38:20Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12960016854 # 545
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-25
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 180 246 / 182 248
+* notice: next accum: outdated-unq outdated-all / unq all: 181 247 / 182 248
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-01-10] / []
+
 2025-01-12T01:16:08Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12729190309 # 538
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-12
